chore: initialize repo and update docs (front/back/sandbox)